== git
  * Major Enhancements
    * Add support for parsing git notes.
    * Add `git cat-file --batch` support with Grit::Repo#batch.
  * Minor Enhancements
    * Grit::Index#commit supports custom committer/author names and dates.
  * Bug Fixes
    * Zero-Padding issue in Grit::Index was fixed.

== 2.3.0 / 2010-09-29
  * Minor Enhancements
    * Add Grit::Repo.init.
  * Bug Fixes
    * Fix Ruby 1.9 compatibility (#24).

== 2.2.1 / 2010-08-23
  * Bug Fixes
    * Fix minor regression due to the changed default values in
      Grit::Index#commit.

== 2.2.0 / 2010-08-19
  * Minor Enhancements
    * Add Grit::Index#delete to allow deletions of files from the index.

== 2.1.0 / 2010-08-04
  * Major Enhancements
    * Add support for parsing annotated tag objects.
    * Add Grit::Repo#recent_tag_name for getting the latest tag name that is
      reachable in a commit.
    * Grit::Diff tracks renames properly if given the :M option.
    * Grit::Commit#diffs and Grit::Commit.diffs both take a git options hash
      that is passed to `git diff`.
  * Minor Enhancements
    * Allow diff to only take one sha
    * Add merge commit diff support
    * Pass along the options to Real Git on a rev-parse miss
    * Raise NoSuchPath with no tree in ls_tree_path
    * Make pure-ruby `ls-tree -r` work with commits
    * Implement select_existing_objects
    * Switch to RakeGem for build management
  * Bug Fixes
    * Add no_quote option for fixing tag listings.
    * Raise custom exceptions on invalid tree objects.
    * Fix Repo#diff (was throwing an error).

== 2.0.0 / 2009-10-27
  * Major Enhancements
    * All filesystem calls have been moved into Grit::Git to allow proxying
  * Non-code changes
    * Removed all trailing whitespace in code files
  * Bug Fixes
    * Repo.archive_tar_gz now passes -n option to gzip to be idempotent
    * Fix RubyGit's diff to detect additions and deletions
      [github.com/defunkt]

== 1.1.1 / 2009-03-31
  * Changes