@@ -317,7 +317,7 @@ module Grit
               if indata.size == 0
                 raise PackFormatError, 'error reading pack data'
               end
-              outdata += zstr.inflate(indata)
+              outdata << zstr.inflate(indata)
             end
             if outdata.size > destsize
               raise PackFormatError, 'error reading pack data'
@@ -351,9 +351,9 @@ module Grit
               cp_size |= delta.getord(pos += 1) << 16 if c & 0x40 != 0
               cp_size = 0x10000 if cp_size == 0
               pos += 1
-              dest += base[cp_off,cp_size]
+              dest << base[cp_off,cp_size]
             elsif c != 0
-              dest += delta[pos,c]
+              dest << delta[pos,c]
               pos += c
             else
               raise PackFormatError, 'invalid delta data'
