@@ -49,9 +49,8 @@ class TestGit < Test::Unit::TestCase
   end
 
   def test_raises_if_too_many_bytes
-    @git.instance_variable_set(:@bytes_read, 6000000)
     assert_raises Grit::Git::GitTimeout do
-      @git.version
+      @git.sh "yes | head -#{Grit::Git.git_max_size + 1}"
     end
   end
 
